# dbt-learning

./: .actrc  .gitignore  .pre-commit-config.yaml  .user.yml  QUICKSTART.md  README.md  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml  setup.sh  validate.sh
.github/workflows/: ci-cd.yml  scheduled-run.yml
data/processed/: .gitkeep
data/raw/: .gitkeep  customers.csv  orders.parquet  products.csv
docs/: architecture.md
macros/: tests.sql  utils.sql
models/marts/: agg_daily_metrics.sql  dim_customers.sql  fact_sales.sql  schema.yml
models/staging/: _sources.yml  schema.yml  stg_customers.sql  stg_orders.sql  stg_products.sql
scripts/: generate_sample_data.py
seeds/: countries.csv  product_categories.csv
snapshots/: customers_snapshot.sql  schema.yml
tests/: schema.yml  test_business_logic.sql  test_data_integrity.sql  test_project_setup.py
