[project]
name = "dbt-learning"
version = "0.1.0"
description = "Projet d'apprentissage DBT avec DuckDB"
authors = [{ name = "Eric", email = "eric@example.com" }]
dependencies = [
    "dbt-core>=1.6.0",
    "dbt-duckdb>=1.6.0",
    "duckdb>=0.9.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "pyyaml>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=term-missing --cov-report=html"
